Adicionado token jwt ao logar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,13 @@
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "typeRoots": [
+      "./src/@types",
+      "./custom_typings",
+      "./@types",
+      "./node_modules/@types"
+    ]
   },
   "include": [
     "src/**/*.ts"
