--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "express": "^4.18.2",
     "pg": "^8.7.3",
@@ -30,6 +30,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "dotenv-safe": "^9.1.0",
     "eslint": "^8.11.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
