--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/yamljs": "^0.2.34",
     "express": "^4.18.2",
     "pg": "^8.7.3",
     "ts-node": "^10.9.1",
@@ -34,7 +36,10 @@
     "eslint": "^8.11.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0-0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "yamljs": "^0.3.0"
   }
 }
